# green-thumb

./: .copier-answers.yml  .dockerignore  .env.local.example  .gitignore  AGENTS.md  CHANGELOG.md  Containerfile  README.md  alembic.ini  pyproject.toml  release-please-config.json
.devcontainer/: devcontainer.json
.github/workflows/: container-build-pr.yml  container-build-push.yml  helm-release.yml  python_code_quality.yml  release-please.yml
alembic/: env.py  script.py.mako
alembic/versions/: 202606121200_initial_schema.py  202606221200_drop_floracodex.py
charts/green-thumb/: .helmignore  Chart.yaml  README.md  values.yaml
charts/green-thumb/templates/: NOTES.txt  _helpers.tpl  backend-deployment.yaml  backend-service.yaml  frontend-deployment.yaml  frontend-service.yaml  ingress.yaml  pvc.yaml
docs/: administration.md  architecture.md  development.md  setup.md  user-guide.md
frontend/: .npmrc  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: auth.setup.ts  navigation.spec.ts  plants.spec.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  queryClient.ts  types.gen.ts  types.ts
frontend/src/api/hooks/: useDashboard.ts  useLocations.ts  useLogs.ts  usePhotos.ts  usePlants.ts  useProfile.ts  useReminders.ts  useSpecies.ts
frontend/src/components/: Layout.tsx  Modal.tsx  PlantCard.tsx  PlantForm.tsx  SpeciesAutocomplete.tsx  Toast.tsx
frontend/src/lib/: dates.ts
frontend/src/pages/: CalendarPage.tsx  DashboardPage.tsx  LocationsPage.tsx  PlantDetailPage.tsx  PlantNewPage.tsx  PlantsPage.tsx  ProfilePage.tsx
integration/: __init__.py
scripts/: mint_api_token.py
src/greenthumb/: __init__.py  config.py  db.py  main.py
src/greenthumb/api/: __init__.py
src/greenthumb/api/v1/: __init__.py  dashboard.py  deps.py  locations.py  logs.py  notifications.py  photos.py  plants.py  reminders.py  species.py
src/greenthumb/auth/: __init__.py  dependencies.py  oidc.py  routes.py  session.py
src/greenthumb/models/: __init__.py  base.py  care_log.py  location.py  photo.py  plant.py  reminder.py  user.py
src/greenthumb/schemas/: __init__.py  care_log.py  dashboard.py  location.py  photo.py  plant.py  reminder.py  species.py  user.py
src/greenthumb/services/: __init__.py  care.py  floracodex.py  images.py  ntfy.py  reminder_evaluator.py
tests/: conftest.py  test_api_token.py  test_auth.py  test_dashboard.py  test_dev_login.py  test_locations.py  test_logs.py  test_misc_routes.py  test_photos.py  test_plants.py  test_reminder_evaluator.py  test_reminders.py  test_spa.py
