[build-system]
requires = ["uv_build~=0.11.21"]
build-backend = "uv_build"

[project]
name = "greenthumb"
version = "0.5.0"
description = "A simple self-hosted plant care tracker."
authors = [
    { name = "stkr22", email = "stkr22@github.com" }
]
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.14,<3.15"
license-files = [
    "LICENSE",
]

keywords = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Python",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.14"
]

dependencies = [
    "aiosqlite~=0.22.1",
    "alembic~=1.18.4",
    "fastapi~=0.137.1",
    "httpx~=0.28.1",
    "joserfc~=1.7.1",
    "pillow~=12.2.0",
    "pydantic-settings~=2.14.1",
    "python-multipart~=0.0.32",
    "sqlalchemy[asyncio]~=2.0.51",
    "sqlmodel~=0.0.38",
    "uvicorn[standard]~=0.49.0",
]

[project.urls]
Homepage = "https://github.com/stkr22/green-thumb"
Repository = "https://github.com/stkr22/green-thumb"
Documentation = "https://github.com/stkr22/green-thumb/tree/main/docs"
Issues = "https://github.com/stkr22/green-thumb/issues"
Changelog = "https://github.com/stkr22/green-thumb/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "ruff~=0.15.17",
    "ty~=0.0.49",
    "pytest~=9.1.0",
    "pytest-cov~=7.1.0",
    "pytest-asyncio~=1.4.0",
    "pytest-timeout~=2.4.0",
]

[tool.uv]
required-version = "~=0.11.8"

[tool.ty.rules]
possibly-unresolved-reference = "warn"
unused-ignore-comment = "warn"

[tool.pytest.ini_options]
minversion = "9.0"
addopts = ["-ra", "-q"]
testpaths = [
    "tests",
]
asyncio_mode = "auto"
timeout = "30"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "W",    # pycodestyle warnings (complement to E)
    "Q",    # flake8-quotes (enforce consistent quote style)
    "TID",  # flake8-tidy-imports (better import practices)
    "ICN",  # flake8-import-conventions (e.g., import pandas as pd)
    "PIE",  # flake8-pie (misc linting improvements)
    "ERA",  # eradicate
    "PL",   # pylint
    "RUF",  # ruff-specific rules
    # "TC" (flake8-type-checking) is intentionally NOT enabled: FastAPI and
    # SQLModel resolve annotations at runtime, so moving imports into
    # TYPE_CHECKING blocks breaks route signatures and table models.
    "ASYNC",  # flake8-async (async/await best practices)
    "FAST", # FastAPI-specific rules
    "D",    # pydocstyle (docstring conventions)
]
ignore = [
    "E203",
    "D203",  # Incompatible with D211 (no-blank-line-before-class)
    "D213",  # Incompatible with D212 (multi-line-summary-first-line)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["S101", "PLR2004", "D", "ARG001", "ARG002", "ASYNC240"]
"scripts/**/*.py" = ["T201", "D", "PLR2004", "PLR0913", "PLW2901", "PTH123", "BLE001"]
